fix: paragraph spacing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,7 +4,6 @@ body {
   background-color: #222831;
   color: rgb(211,211,211);
   font-family: 'PT Sans', sans-serif;
-  margin: 0;
   line-height: 1.5;
 }
 
@@ -45,6 +44,7 @@ html {
 p {
   color: rgb(211,211,211);
   font-size: 16px;
+  padding-bottom: 15px;
 }
 
 a, a:hover, a:active, a:visited, a:focus {
